--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -13,24 +13,55 @@
 <body>
   <div id="app" class="popup">
     <header class="popup__header">
-      <span class="popup__brand">Learning Assistant</span>
+      <span class="popup__brand" id="viewTitle">Welcome Back</span>
+      <p class="popup__subtitle" id="viewSubtitle">Sign in to continue to your dashboard</p>
+      <button id="signOutIcon" class="icon-btn hidden" aria-label="Sign out" title="Sign out">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 21H6a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h3" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/><path d="M16 17l5-5-5-5" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 12H9" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/></svg>
+      </button>
     </header>
     <main class="popup__main">
-      <div class="form">
-        <label class="label" for="account">Mock account</label>
-        <select id="account" class="select">
-          <option value="student">student@example.com</option>
-          <option value="coach">coach@example.com</option>
-        </select>
+      <form class="signin" id="signinForm" aria-hidden="false">
+        <div class="field">
+          <label class="field__label" for="email">Email</label>
+          <div class="field__control">
+            <input id="email" type="email" class="input" placeholder="creator@decster.com" autocomplete="email" required />
+            <span class="field__icon" aria-hidden="true">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z" stroke="currentColor" stroke-width="1.5"/><path d="M22 6L12.53 12.29C12.2 12.51 11.8 12.51 11.47 12.29L2 6" stroke="currentColor" stroke-width="1.5"/></svg>
+            </span>
+          </div>
+        </div>
 
-        <label class="label" for="password">Password</label>
-        <input id="password" type="password" class="input" placeholder="Enter any password" />
+        <div class="field">
+          <label class="field__label" for="password">Password</label>
+          <div class="field__control">
+            <input id="password" type="password" class="input" placeholder="Enter your password" autocomplete="current-password" required />
+            <button type="button" id="togglePassword" class="field__action" aria-label="Toggle password visibility">
+              <svg id="eyeIcon" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 5C7 5 3.73 8.11 2 12C3.73 15.89 7 19 12 19C17 19 20.27 15.89 22 12C20.27 8.11 17 5 12 5Z" stroke="currentColor" stroke-width="1.5"/><circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="1.5"/></svg>
+            </button>
+          </div>
+        </div>
 
-        <button id="loginBtn" class="btn btn--gold">Log in</button>
+        <div class="row row--between">
+          <label class="checkbox"><input id="remember" type="checkbox" /> <span>Remember me</span></label>
+          <a href="#" class="link">Forgot password?</a>
+        </div>
 
-        <p id="status" class="status"></p>
-      </div>
-      <div class="hint">This uses mock authentication. Supabase will be wired later.</div>
+        <button id="loginBtn" class="btn btn--primary" type="submit">Sign In</button>
+
+        <div class="divider"><span>or</span></div>
+
+        <button id="googleBtn" class="btn btn--ghost" type="button">
+          <span class="google-logo">G</span>
+          <span>Continue with Google</span>
+        </button>
+
+        <p id="status" class="status" role="status" aria-live="polite"></p>
+      </form>
+      <section id="homeView" class="home hidden" aria-hidden="true">
+        <div class="home__section-title">Communities</div>
+        <div id="communityList" class="community-list" role="list"></div>
+        <div class="support"><span class="support-label">Need help?</span> <a href="#" class="link">Contact Support</a></div>
+      </section>
     </main>
   </div>
   <script src="popup.js" type="module"></script>
